# inelastic_models

./: .gitignore  CMakeLists.txt  README.md  build  run.sh
example/: inelastic_models.cpp
lib/gel/: gel.cpp  gel.hpp
src/: common.cpp  common.hpp  inelastic_models.cpp  mazars_model.cpp  mazars_model.hpp  mazars_mu_model.cpp  mazars_mu_model.hpp  vonmises.cpp  vonmises.hpp  vonmises_generalized.cpp  vonmises_generalized.hpp
